src/main/gen/com/github/guillaumetaffin/structurizr/intellij/dsl/parser/StructurizrDslParser.java
// This is a generated file. Not intended for manual editing.
package com.github.guillaumetaffin.structurizr.intellij.dsl.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.github.guillaumetaffin.structurizr.intellij.dsl.psi.StructurizrDslTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;
import static com.github.guillaumetaffin.structurizr.intellij.dsl.psi.Tokens.*;
import static com.intellij.psi.TokenType.WHITE_SPACE;;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class StructurizrDslParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return structurizrFile(b, l + 1);
  }

  /* ********************************************************** */
  // any_text
  public static boolean a_description(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "a_description")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, A_DESCRIPTION, "<a description>");
    r = any_text(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // any_text
  public static boolean a_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "a_name")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, A_NAME, "<a name>");
    r = any_text(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '!adrs' any_text any_text? LINE_BREAK+
  public static boolean adrs_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "adrs_statement")) return false;
    if (!nextTokenIs(b, ADRS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ADRS);
    r = r && any_text(b, l + 1);
    r = r && adrs_statement_2(b, l + 1);
    r = r && adrs_statement_3(b, l + 1);
    exit_section_(b, m, ADRS_STATEMENT, r);
    return r;
  }

  // any_text?
  private static boolean adrs_statement_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "adrs_statement_2")) return false;
    any_text(b, l + 1);
    return true;
  }

  // LINE_BREAK+
  private static boolean adrs_statement_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "adrs_statement_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LINE_BREAK);
    while (r) {
      int c = current_position_(b);
      if (!consumeToken(b, LINE_BREAK)) break;
      if (!empty_element_parsed_guard_(b, "adrs_statement_3", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // "workspace"
  //  | "model"
  //  | "softwareSystem"
  //  | "person"
  //  | "container"
  //  | "component"
  //  | "group"
  //  | "extends"
  //  | "name"
  //  | "description"
  //  | "properties"
  //  | "!identifiers"
  //  | "hierarchical"
  //  | "flat"
  //  | "!docs"
  //  | "!adrs"
  //  | "views"
  //  | "tags"
  //  | "url"
  //  | "perspectives"
  //  | "this"
  //  | "technology"
  //  | "element"
  //  | "deploymentEnvironment"
  //  | "deploymentNode"
  //  | "deploymentGroup"
  //  | "instances"
  //  | "infrastructureNode"
  //  | "softwareSystemInstance"
  //  | "healthCheck"
  //  | "containerInstance"
  static boolean any_keyword(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "any_keyword")) return false;
    boolean r;
    r = consumeToken(b, WORKSPACE);
    if (!r) r = consumeToken(b, MODEL);
    if (!r) r = consumeToken(b, SOFTWARE_SYSTEM);
    if (!r) r = consumeToken(b, PERSON);
    if (!r) r = consumeToken(b, CONTAINER);
    if (!r) r = consumeToken(b, COMPONENT);
    if (!r) r = consumeToken(b, GROUP);
    if (!r) r = consumeToken(b, EXTENDS);
    if (!r) r = consumeToken(b, NAME);
    if (!r) r = consumeToken(b, DESCRIPTION);
    if (!r) r = consumeToken(b, PROPERTIES);
    if (!r) r = consumeToken(b, IDENTIFIERS);
    if (!r) r = consumeToken(b, HIERARCHICAL);
    if (!r) r = consumeToken(b, FLAT);
    if (!r) r = consumeToken(b, DOCS);
    if (!r) r = consumeToken(b, ADRS);
    if (!r) r = consumeToken(b, VIEWS);
    if (!r) r = consumeToken(b, TAGS);
    if (!r) r = consumeToken(b, URL);
    if (!r) r = consumeToken(b, PERSPECTIVES);
    if (!r) r = consumeToken(b, THIS);
    if (!r) r = consumeToken(b, TECHNOLOGY);
    if (!r) r = consumeToken(b, ELEMENT);
    if (!r) r = consumeToken(b, DEPLOYMENT_ENVIRONMENT);
    if (!r) r = consumeToken(b, DEPLOYMENT_NODE);
    if (!r) r = consumeToken(b, DEPLOYMENT_GROUP);
    if (!r) r = consumeToken(b, INSTANCES);
    if (!r) r = consumeToken(b, INFRASTRUCTURE_NODE);
    if (!r) r = consumeToken(b, SOFTWARE_SYSTEM_INSTANCE);
    if (!r) r = consumeToken(b, HEALTH_CHECK);
    if (!r) r = consumeToken(b, CONTAINER_INSTANCE);
    return r;
  }

  /* ********************************************************** */
  // UNQUOTED_TEXT | QUOTED_TEXT| any_keyword
  static boolean any_text(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "any_text")) return false;
    boolean r;
    r = consumeToken(b, UNQUOTED_TEXT);
    if (!r) r = consumeToken(b, QUOTED_TEXT);
    if (!r) r = any_keyword(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // "}" (LINE_BREAK+ | <<eof>>)
  public static boolean closing_block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "closing_block")) return false;
    if (!nextTokenIs(b, CLOSE_PARENS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CLOSE_PARENS);
    r = r && closing_block_1(b, l + 1);
    exit_section_(b, m, CLOSING_BLOCK, r);
    return r;
  }

  // LINE_BREAK+ | <<eof>>
  private static boolean closing_block_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "closing_block_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = closing_block_1_0(b, l + 1);
    if (!r) r = eof(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // LINE_BREAK+
  private static boolean closing_block_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "closing_block_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LINE_BREAK);
    while (r) {
      int c = current_position_(b);
      if (!consumeToken(b, LINE_BREAK)) break;
      if (!empty_element_parsed_guard_(b, "closing_block_1_0", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // opening_block component_block_statement*  closing_block
  public static boolean component_block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_block")) return false;
    if (!nextTokenIs(b, OPEN_PARENS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = opening_block(b, l + 1);
    r = r && component_block_1(b, l + 1);
    r = r && closing_block(b, l + 1);
    exit_section_(b, m, COMPONENT_BLOCK, r);
    return r;
  }

  // component_block_statement*
  private static boolean component_block_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_block_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!component_block_statement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "component_block_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // docs_statement
  //  | adrs_statement
  //  | description_statement
  //  | technology_statement
  //  | tags_statement
  //  | url_statement
  //  | properties_statement
  //  | perspectives_statement
  //  | relation_statement
  static boolean component_block_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_block_statement")) return false;
    boolean r;
    r = docs_statement(b, l + 1);
    if (!r) r = adrs_statement(b, l + 1);
    if (!r) r = description_statement(b, l + 1);
    if (!r) r = technology_statement(b, l + 1);
    if (!r) r = tags_statement(b, l + 1);
    if (!r) r = url_statement(b, l + 1);
    if (!r) r = properties_statement(b, l + 1);
    if (!r) r = perspectives_statement(b, l + 1);
    if (!r) r = relation_statement(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // <<tech_taggable_element_definition "component" >> (component_block | LINE_BREAK+)
  public static boolean component_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_statement")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMPONENT_STATEMENT, "<component statement>");
    r = tech_taggable_element_definition(b, l + 1, COMPONENT_parser_);
    r = r && component_statement_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // component_block | LINE_BREAK+
  private static boolean component_statement_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_statement_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = component_block(b, l + 1);
    if (!r) r = component_statement_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // LINE_BREAK+
  private static boolean component_statement_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_statement_1_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LINE_BREAK);
    while (r) {
      int c = current_position_(b);
      if (!consumeToken(b, LINE_BREAK)) break;
      if (!empty_element_parsed_guard_(b, "component_statement_1_1", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // "configuration" opening_block closing_block
  public static boolean configuration_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "configuration_statement")) return false;
    if (!nextTokenIs(b, CONFIGURATION)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CONFIGURATION);
    r = r && opening_block(b, l + 1);
    r = r && closing_block(b, l + 1);
    exit_section_(b, m, CONFIGURATION_STATEMENT, r);
    return r;
  }

  /* ********************************************************** */
  // opening_block container_block_statement* closing_block
  public static boolean container_block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "container_block")) return false;
    if (!nextTokenIs(b, OPEN_PARENS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = opening_block(b, l + 1);
    r = r && container_block_1(b, l + 1);
    r = r && closing_block(b, l + 1);
    exit_section_(b, m, CONTAINER_BLOCK, r);
    return r;
  }

  // container_block_statement*
  private static boolean container_block_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "container_block_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!container_block_statement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "container_block_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // component_statement
  //  | docs_statement
  //  | adrs_statement
  //  | <<group_statements container_block_statement>>
  //  | description_statement
  //  | technology_statement
  //  | tags_statement
  //  | url_statement
  //  | properties_statement
  //  | perspectives_statement
  //  | relation_statement
  static boolean container_block_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "container_block_statement")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = component_statement(b, l + 1);
    if (!r) r = docs_statement(b, l + 1);
    if (!r) r = adrs_statement(b, l + 1);
    if (!r) r = group_statements(b, l + 1, StructurizrDslParser::container_block_statement);
    if (!r) r = description_statement(b, l + 1);
    if (!r) r = technology_statement(b, l + 1);
    if (!r) r = tags_statement(b, l + 1);
    if (!r) r = url_statement(b, l + 1);
    if (!r) r = properties_statement(b, l + 1);
    if (!r) r = perspectives_statement(b, l + 1);
    if (!r) r = relation_statement(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // opening_block container_instance_block_statement* closing_block
  public static boolean container_instance_block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "container_instance_block")) return false;
    if (!nextTokenIs(b, OPEN_PARENS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = opening_block(b, l + 1);
    r = r && container_instance_block_1(b, l + 1);
    r = r && closing_block(b, l + 1);
    exit_section_(b, m, CONTAINER_INSTANCE_BLOCK, r);
    return r;
  }

  // container_instance_block_statement*
  private static boolean container_instance_block_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "container_instance_block_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!container_instance_block_statement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "container_instance_block_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // relation_statement
  //  | description_statement
  //  | tags_statement
  //  | url_statement
  //  | properties_statement
  //  | perspectives_statement
  //  |health_check_statement
  static boolean container_instance_block_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "container_instance_block_statement")) return false;
    boolean r;
    r = relation_statement(b, l + 1);
    if (!r) r = description_statement(b, l + 1);
    if (!r) r = tags_statement(b, l + 1);
    if (!r) r = url_statement(b, l + 1);
    if (!r) r = properties_statement(b, l + 1);
    if (!r) r = perspectives_statement(b, l + 1);
    if (!r) r = health_check_statement(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // 'containerInstance' id any_text? tag? (container_instance_block | LINE_BREAK+)
  public static boolean container_instance_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "container_instance_statement")) return false;
    if (!nextTokenIs(b, CONTAINER_INSTANCE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CONTAINER_INSTANCE);
    r = r && id(b, l + 1);
    r = r && container_instance_statement_2(b, l + 1);
    r = r && container_instance_statement_3(b, l + 1);
    r = r && container_instance_statement_4(b, l + 1);
    exit_section_(b, m, CONTAINER_INSTANCE_STATEMENT, r);
    return r;
  }

  // any_text?
  private static boolean container_instance_statement_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "container_instance_statement_2")) return false;
    any_text(b, l + 1);
    return true;
  }

  // tag?
  private static boolean container_instance_statement_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "container_instance_statement_3")) return false;
    tag(b, l + 1);
    return true;
  }

  // container_instance_block | LINE_BREAK+
  private static boolean container_instance_statement_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "container_instance_statement_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = container_instance_block(b, l + 1);
    if (!r) r = container_instance_statement_4_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // LINE_BREAK+
  private static boolean container_instance_statement_4_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "container_instance_statement_4_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LINE_BREAK);
    while (r) {
      int c = current_position_(b);
      if (!consumeToken(b, LINE_BREAK)) break;
      if (!empty_element_parsed_guard_(b, "container_instance_statement_4_1", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // <<tech_taggable_element_definition "container" >> (container_block | LINE_BREAK+)
  public static boolean container_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "container_statement")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONTAINER_STATEMENT, "<container statement>");
    r = tech_taggable_element_definition(b, l + 1, CONTAINER_parser_);
    r = r && container_statement_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // container_block | LINE_BREAK+
  private static boolean container_statement_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "container_statement_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = container_block(b, l + 1);
    if (!r) r = container_statement_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // LINE_BREAK+
  private static boolean container_statement_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "container_statement_1_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LINE_BREAK);
    while (r) {
      int c = current_position_(b);
      if (!consumeToken(b, LINE_BREAK)) break;
      if (!empty_element_parsed_guard_(b, "container_statement_1_1", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // opening_block deployment_environment_block_statement* closing_block
  public static boolean deployment_environment_block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deployment_environment_block")) return false;
    if (!nextTokenIs(b, OPEN_PARENS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = opening_block(b, l + 1);
    r = r && deployment_environment_block_1(b, l + 1);
    r = r && closing_block(b, l + 1);
    exit_section_(b, m, DEPLOYMENT_ENVIRONMENT_BLOCK, r);
    return r;
  }

  // deployment_environment_block_statement*
  private static boolean deployment_environment_block_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deployment_environment_block_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!deployment_environment_block_statement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "deployment_environment_block_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // relation_statement
  //  | deployment_group_statement
  //  | deployment_node_statement
  //  | <<group_statements deployment_environment_block_statement>>
  static boolean deployment_environment_block_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deployment_environment_block_statement")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = relation_statement(b, l + 1);
    if (!r) r = deployment_group_statement(b, l + 1);
    if (!r) r = deployment_node_statement(b, l + 1);
    if (!r) r = group_statements(b, l + 1, StructurizrDslParser::deployment_environment_block_statement);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // 'deploymentEnvironment' a_name deployment_environment_block
  public static boolean deployment_environment_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deployment_environment_statement")) return false;
    if (!nextTokenIs(b, DEPLOYMENT_ENVIRONMENT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DEPLOYMENT_ENVIRONMENT);
    r = r && a_name(b, l + 1);
    r = r && deployment_environment_block(b, l + 1);
    exit_section_(b, m, DEPLOYMENT_ENVIRONMENT_STATEMENT, r);
    return r;
  }

  /* ********************************************************** */
  // 'deploymentGroup' a_name LINE_BREAK+
  public static boolean deployment_group_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deployment_group_statement")) return false;
    if (!nextTokenIs(b, DEPLOYMENT_GROUP)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DEPLOYMENT_GROUP);
    r = r && a_name(b, l + 1);
    r = r && deployment_group_statement_2(b, l + 1);
    exit_section_(b, m, DEPLOYMENT_GROUP_STATEMENT, r);
    return r;
  }

  // LINE_BREAK+
  private static boolean deployment_group_statement_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deployment_group_statement_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LINE_BREAK);
    while (r) {
      int c = current_position_(b);
      if (!consumeToken(b, LINE_BREAK)) break;
      if (!empty_element_parsed_guard_(b, "deployment_group_statement_2", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // opening_block deployment_node_block_statement* closing_block
  public static boolean deployment_node_block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deployment_node_block")) return false;
    if (!nextTokenIs(b, OPEN_PARENS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = opening_block(b, l + 1);
    r = r && deployment_node_block_1(b, l + 1);
    r = r && closing_block(b, l + 1);
    exit_section_(b, m, DEPLOYMENT_NODE_BLOCK, r);
    return r;
  }

  // deployment_node_block_statement*
  private static boolean deployment_node_block_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deployment_node_block_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!deployment_node_block_statement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "deployment_node_block_1", c)) break;
    }
    return true;
  }
